--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^25.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mongoose": "^9.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
